// Copyright 2016 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tokenserver;

// ServiceAccounts is responsible for managing Cloud IAM Service Accounts.
service ServiceAccounts {
  // CreateServiceAccount creates Google Cloud IAM service account associated
  // with given host.
  //
  // It uses token server configuration to pick a cloud project and to derive
  // service account ID. See documentation for CertificateAuthorityConfig proto
  // message for more info.
  //
  // This operation is idempotent.
  rpc CreateServiceAccount(CreateServiceAccountRequest) returns (CreateServiceAccountResponse);
}

// CreateServiceAccountRequest is parameters for CreateServiceAccount call.
message CreateServiceAccountRequest {
  string ca = 1;   // CN of a CA that signed the host's certificate
  string fqdn = 2; // a host to create an associated service account for (CN of a cert)
  bool force = 3;  // if true, create an account even if the server thinks it exists
}

// CreateServiceAccountResponse is returned by CreateServiceAccount call.
message CreateServiceAccountResponse {
  ServiceAccount service_account = 1; // created service account
}

///////////////////////////////////////////////////////////////////////////////

// ServiceAccount describes a Cloud IAM Service Account.
//
// See https://cloud.google.com/iam/reference/rest/v1/projects.serviceAccounts#ServiceAccount
message ServiceAccount {
  string project_id = 1;       // the id of the project that owns the service account
  string unique_id = 2;        // the unique and stable id of the service account
  string email = 3;            // the email address of the service account
  string display_name = 4;     // the description of the service account
  string oauth2_client_id = 5; // the OAuth2 client id for the service account
}
